test/development/acceptance-app/__snapshots__/server-components.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Overlay for server components createContext called in Server Component should show error when React.createContext is called 1`] = `
" 1 of 1 unhandled error
Server Error

TypeError: createContext only works in Client Components. Add the \\"use client\\" directive at the top of the file to use it. Read more: https://beta.nextjs.org/docs/rendering/server-and-client-components#context

This error happened while generating the page. Any console logs will be displayed in the terminal window.

app/page.js (3:24) @ React

  1 | 
  2 | import React from 'react'
> 3 | const Context = React.createContext()
    |                ^
  4 | export default function Page() {
  5 |   return (
  6 |     <>"
`;

exports[`Error Overlay for server components createContext called in Server Component should show error when React.createContext is called in external package 1`] = `
" 1 of 1 unhandled error
Server Error

TypeError: createContext only works in Client Components. Add the \\"use client\\" directive at the top of the file to use it. Read more: https://beta.nextjs.org/docs/rendering/server-and-client-components#context

This error happened while generating the page. Any console logs will be displayed in the terminal window.

null"
`;

exports[`Error Overlay for server components createContext called in Server Component should show error when createContext is called in external package 1`] = `
" 1 of 1 unhandled error
Server Error

TypeError: createContext only works in Client Components. Add the \\"use client\\" directive at the top of the file to use it. Read more: https://beta.nextjs.org/docs/rendering/server-and-client-components#context

This error happened while generating the page. Any console logs will be displayed in the terminal window.

null"
`;
